[gd_scene load_steps=96 format=3 uid="uid://clpl3one3n7q6"]

[ext_resource type="Script" path="res://main.gd" id="1_kj17n"]
[ext_resource type="PackedScene" uid="uid://ccba4pn4u154r" path="res://Text.tscn" id="2_44nk4"]
[ext_resource type="Texture2D" uid="uid://dea5ox34xvjnf" path="res://assets/Buildings/Base.png" id="2_j6tkv"]
[ext_resource type="Texture2D" uid="uid://c2hmoblwkbyjs" path="res://assets/Win animation/Scale1.png" id="3_43h3p"]
[ext_resource type="PackedScene" uid="uid://p07u8kw4d63y" path="res://block_display.tscn" id="4_8t058"]
[ext_resource type="Texture2D" uid="uid://qextg77k244e" path="res://assets/No-No-Zone/No-No-Zone-Rest.png" id="4_ra0dt"]
[ext_resource type="Texture2D" uid="uid://dbu5swfhbwpdk" path="res://assets/Win animation/Scale2.png" id="4_uags6"]
[ext_resource type="Texture2D" uid="uid://0qopuymgwajv" path="res://assets/Win animation/Scale3.png" id="5_hauqc"]
[ext_resource type="Texture2D" uid="uid://d1cqj76i70801" path="res://assets/No-No-Zone/No-No-Zone-wall.png" id="5_jcp60"]
[ext_resource type="Texture2D" uid="uid://4i3vf3gw1noa" path="res://assets/Win animation/Scale4.png" id="6_61vyn"]
[ext_resource type="Texture2D" uid="uid://cclhpq6t3ia0r" path="res://assets/Win animation/Scale5.png" id="7_bc8mr"]
[ext_resource type="Texture2D" uid="uid://uy51ja6r0oqg" path="res://assets/Win animation/Scale6.png" id="8_tfy4u"]
[ext_resource type="Texture2D" uid="uid://brp6dt8rvqhvm" path="res://assets/Win animation/Scale7.png" id="9_c03lt"]
[ext_resource type="Texture2D" uid="uid://dtqmcrwu2g7dr" path="res://assets/Win animation/Scale8.png" id="10_iilrc"]
[ext_resource type="Texture2D" uid="uid://c3cb2ub3vrlos" path="res://assets/Win animation/Scale9.png" id="11_2eiu2"]
[ext_resource type="Texture2D" uid="uid://48b5t83qs4p6" path="res://assets/Win animation/Scale10.png" id="12_odad4"]
[ext_resource type="Texture2D" uid="uid://5vk5tymcvfmi" path="res://assets/Win animation/Scale11.png" id="13_vibju"]
[ext_resource type="Texture2D" uid="uid://bucg82c6bkpxn" path="res://assets/Win animation/Scale12.png" id="14_hdlal"]
[ext_resource type="Texture2D" uid="uid://bnpt5sb4tpesb" path="res://assets/Win animation/Scale13.png" id="15_hrq5d"]
[ext_resource type="Texture2D" uid="uid://chs87n3dg2ikc" path="res://assets/Win animation/Scale14.png" id="16_w0hnx"]
[ext_resource type="Texture2D" uid="uid://bl0x83lgo5fy6" path="res://assets/Win animation/Scale15.png" id="17_37yme"]
[ext_resource type="Texture2D" uid="uid://b6sxdouggjxfk" path="res://assets/Win animation/Scale16.png" id="18_8fguk"]
[ext_resource type="Texture2D" uid="uid://bd128ox1lysr4" path="res://assets/Win animation/Scale17.png" id="19_3nn61"]
[ext_resource type="Texture2D" uid="uid://7elilma8oktp" path="res://assets/Win animation/Scale18.png" id="20_wa4tw"]
[ext_resource type="Texture2D" uid="uid://cby2r37uhqjbn" path="res://assets/Win animation/Scale19.png" id="21_0dsxr"]
[ext_resource type="Texture2D" uid="uid://cbfvncwvm6bd0" path="res://assets/Win animation/Scale20.png" id="22_60tbp"]
[ext_resource type="Texture2D" uid="uid://cv7axbu1odqdq" path="res://assets/Win animation/Scale21.png" id="23_57s4i"]
[ext_resource type="Texture2D" uid="uid://dtpr6hvms5lhu" path="res://assets/Win animation/Scale22.png" id="24_ks8h6"]
[ext_resource type="Texture2D" uid="uid://c06vhgxokyjxr" path="res://assets/Win animation/Scale23.png" id="25_xivh2"]
[ext_resource type="Texture2D" uid="uid://bkv56fs2oo88j" path="res://assets/Win animation/Scale24.png" id="26_qqpgq"]
[ext_resource type="Texture2D" uid="uid://plw3s4w0f807" path="res://assets/Win animation/Scale25.png" id="27_rrhur"]
[ext_resource type="Texture2D" uid="uid://bn7m2mj7avgn2" path="res://assets/Win animation/Scale26.png" id="28_lwuqb"]
[ext_resource type="Texture2D" uid="uid://c8vj0ggygvkgf" path="res://assets/Win animation/Scale27.png" id="29_sjlms"]
[ext_resource type="Texture2D" uid="uid://j5836edfr6ak" path="res://assets/Win animation/Scale28.png" id="30_ecj7d"]
[ext_resource type="Texture2D" uid="uid://ct4gk0ik2qil8" path="res://assets/Win animation/Scale29.png" id="31_8uiuf"]
[ext_resource type="Texture2D" uid="uid://b80eihetujjif" path="res://assets/Win animation/Scale30.png" id="32_qpvf3"]
[ext_resource type="Texture2D" uid="uid://cd63om0vlyhvw" path="res://assets/Win animation/Scale31.png" id="33_r8xry"]
[ext_resource type="Texture2D" uid="uid://b33ueq2u8sdmv" path="res://assets/Win animation/Scale32.png" id="34_j6piu"]
[ext_resource type="Texture2D" uid="uid://bjwfmmwk4jj6b" path="res://assets/Win animation/Scale33.png" id="35_jrw2c"]
[ext_resource type="Texture2D" uid="uid://dsjtj1d640aky" path="res://assets/Win animation/Scale34.png" id="36_jygqr"]
[ext_resource type="Texture2D" uid="uid://rwv0vs6vvwgo" path="res://assets/Win animation/Scale35.png" id="37_x6i6f"]
[ext_resource type="Texture2D" uid="uid://cb7fukcuwv5xb" path="res://assets/Win animation/Scale36.png" id="38_lkyxf"]
[ext_resource type="Texture2D" uid="uid://p67pdwvuanjl" path="res://assets/Win animation/Scale37.png" id="39_pqpea"]
[ext_resource type="Texture2D" uid="uid://c7ppiuxd3uqgc" path="res://assets/Win animation/Scale38.png" id="40_mhnts"]
[ext_resource type="Texture2D" uid="uid://dg6edd4uuuhra" path="res://assets/Win animation/Scale39.png" id="41_3nxn0"]
[ext_resource type="Texture2D" uid="uid://dd2ugd0its6wk" path="res://assets/Win animation/Scale40.png" id="42_q8k38"]
[ext_resource type="Texture2D" uid="uid://cjkttpcaffk5d" path="res://assets/Win animation/Scale41.png" id="43_tvb8c"]
[ext_resource type="Texture2D" uid="uid://ctqt8jhp5f3q6" path="res://assets/Win animation/Scale42.png" id="44_fe26k"]
[ext_resource type="Texture2D" uid="uid://ce1hejg5gwvb0" path="res://assets/Win animation/Scale43.png" id="45_ltrmn"]
[ext_resource type="Texture2D" uid="uid://blstn8krl4o1g" path="res://assets/Win animation/Scale44.png" id="46_akpps"]
[ext_resource type="Texture2D" uid="uid://dnfn3mu6elhfo" path="res://assets/Win animation/Scale45.png" id="47_kch5m"]
[ext_resource type="Texture2D" uid="uid://br66nbi2xsbx" path="res://assets/Win animation/Scale46.png" id="48_j18vs"]
[ext_resource type="Texture2D" uid="uid://yni0arw8j05q" path="res://assets/Win animation/Scale47.png" id="49_7q74i"]
[ext_resource type="Texture2D" uid="uid://dt5ar5r86typ4" path="res://assets/Sky/Sky_no_text.png" id="51_7bvkt"]
[ext_resource type="Texture2D" uid="uid://cbxypiyrumnp8" path="res://assets/UI/Win/Lose.png" id="55_vaftp"]
[ext_resource type="Texture2D" uid="uid://bvv5tdb7asi6h" path="res://assets/UI/Win/Score.png" id="56_62lxf"]
[ext_resource type="Texture2D" uid="uid://bhuovq7c5l4up" path="res://assets/UI/Buttons1.png" id="58_q3fqv"]
[ext_resource type="Texture2D" uid="uid://bfhlsdta4j3mr" path="res://assets/UI/Buttons2.png" id="59_uhnkx"]
[ext_resource type="Texture2D" uid="uid://dktd43r7k6lly" path="res://assets/UI/Buttons3.png" id="60_487fi"]
[ext_resource type="Texture2D" uid="uid://86c8ohb1agwe" path="res://assets/UI/Buttons4.png" id="61_fdwor"]
[ext_resource type="Texture2D" uid="uid://demuvli2oi2at" path="res://assets/UI/Buttons5.png" id="62_kto4k"]
[ext_resource type="Texture2D" uid="uid://cnnek5o1sf7q4" path="res://assets/UI/Buttons6.png" id="63_msp78"]
[ext_resource type="Texture2D" uid="uid://xfupf5nqeuhm" path="res://assets/UI/Buttons7.png" id="64_yf0wa"]
[ext_resource type="Texture2D" uid="uid://yoes5mebqn56" path="res://assets/UI/Buttons8.png" id="65_hxnir"]
[ext_resource type="Texture2D" uid="uid://d3pu023egq846" path="res://assets/UI/Buttons9.png" id="66_jpy5h"]
[ext_resource type="Texture2D" uid="uid://civ282tse6has" path="res://assets/UI/Buttons10.png" id="67_5trg6"]
[ext_resource type="Texture2D" uid="uid://ceav740iyf855" path="res://assets/UI/Win/Cover-up-layer.png" id="68_3eue6"]
[ext_resource type="Texture2D" uid="uid://c8n6hu4retard" path="res://assets/UI/HUD-Buttons1.png" id="68_te6nk"]
[ext_resource type="Texture2D" uid="uid://b263hpghjm0or" path="res://assets/UI/HUD-Buttons2.png" id="69_p1vqd"]
[ext_resource type="Texture2D" uid="uid://bt5x2oflo58kg" path="res://assets/UI/HUD-Buttons3.png" id="70_jx6p2"]
[ext_resource type="Texture2D" uid="uid://dcmh5lfi5iejs" path="res://assets/UI/HUD-Buttons4.png" id="71_5gw1i"]
[ext_resource type="Texture2D" uid="uid://bga75h8hr1rl5" path="res://assets/UI/HUD-Buttons5.png" id="72_rk4n8"]
[ext_resource type="Texture2D" uid="uid://d2xt5mocutlys" path="res://assets/UI/HUD-Buttons6.png" id="73_kpjjg"]
[ext_resource type="Texture2D" uid="uid://8a4wwjdetva" path="res://assets/UI/HUD-Buttons7.png" id="74_xd88w"]
[ext_resource type="Texture2D" uid="uid://bj5rvodwiutdf" path="res://assets/UI/HUD-Buttons8.png" id="75_7tos3"]
[ext_resource type="Texture2D" uid="uid://dhfed81mchrat" path="res://assets/UI/HUD-Buttons9.png" id="76_lu6st"]
[ext_resource type="Texture2D" uid="uid://bp64vcjgpfkq5" path="res://assets/UI/HUD-Buttons10.png" id="77_loym3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tqif6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_43h3p")
}, {
"duration": 1.0,
"texture": ExtResource("4_uags6")
}, {
"duration": 1.0,
"texture": ExtResource("5_hauqc")
}, {
"duration": 1.0,
"texture": ExtResource("6_61vyn")
}, {
"duration": 1.0,
"texture": ExtResource("7_bc8mr")
}, {
"duration": 1.0,
"texture": ExtResource("8_tfy4u")
}, {
"duration": 1.0,
"texture": ExtResource("9_c03lt")
}, {
"duration": 1.0,
"texture": ExtResource("10_iilrc")
}, {
"duration": 1.0,
"texture": ExtResource("11_2eiu2")
}, {
"duration": 1.0,
"texture": ExtResource("12_odad4")
}, {
"duration": 1.0,
"texture": ExtResource("13_vibju")
}, {
"duration": 1.0,
"texture": ExtResource("14_hdlal")
}, {
"duration": 1.0,
"texture": ExtResource("15_hrq5d")
}, {
"duration": 1.0,
"texture": ExtResource("16_w0hnx")
}, {
"duration": 1.0,
"texture": ExtResource("17_37yme")
}, {
"duration": 1.0,
"texture": ExtResource("18_8fguk")
}, {
"duration": 1.0,
"texture": ExtResource("19_3nn61")
}, {
"duration": 1.0,
"texture": ExtResource("20_wa4tw")
}, {
"duration": 1.0,
"texture": ExtResource("21_0dsxr")
}, {
"duration": 1.0,
"texture": ExtResource("22_60tbp")
}, {
"duration": 1.0,
"texture": ExtResource("23_57s4i")
}, {
"duration": 1.0,
"texture": ExtResource("24_ks8h6")
}, {
"duration": 1.0,
"texture": ExtResource("25_xivh2")
}, {
"duration": 1.0,
"texture": ExtResource("26_qqpgq")
}, {
"duration": 1.0,
"texture": ExtResource("27_rrhur")
}, {
"duration": 1.0,
"texture": ExtResource("28_lwuqb")
}, {
"duration": 1.0,
"texture": ExtResource("29_sjlms")
}, {
"duration": 1.0,
"texture": ExtResource("30_ecj7d")
}, {
"duration": 1.0,
"texture": ExtResource("31_8uiuf")
}, {
"duration": 1.0,
"texture": ExtResource("32_qpvf3")
}, {
"duration": 1.0,
"texture": ExtResource("33_r8xry")
}, {
"duration": 1.0,
"texture": ExtResource("34_j6piu")
}, {
"duration": 1.0,
"texture": ExtResource("35_jrw2c")
}, {
"duration": 1.0,
"texture": ExtResource("36_jygqr")
}, {
"duration": 1.0,
"texture": ExtResource("37_x6i6f")
}, {
"duration": 1.0,
"texture": ExtResource("38_lkyxf")
}, {
"duration": 1.0,
"texture": ExtResource("39_pqpea")
}, {
"duration": 1.0,
"texture": ExtResource("40_mhnts")
}, {
"duration": 1.0,
"texture": ExtResource("41_3nxn0")
}, {
"duration": 1.0,
"texture": ExtResource("42_q8k38")
}, {
"duration": 1.0,
"texture": ExtResource("43_tvb8c")
}, {
"duration": 1.0,
"texture": ExtResource("44_fe26k")
}, {
"duration": 1.0,
"texture": ExtResource("45_ltrmn")
}, {
"duration": 1.0,
"texture": ExtResource("46_akpps")
}, {
"duration": 1.0,
"texture": ExtResource("47_kch5m")
}, {
"duration": 1.0,
"texture": ExtResource("48_j18vs")
}, {
"duration": 1.0,
"texture": ExtResource("49_7q74i")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p4n67"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jjq1f"]
texture = ExtResource("68_te6nk")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_s3m5w"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("68_te6nk")
frame_1/texture = ExtResource("69_p1vqd")
frame_1/duration = 1.0
frame_2/texture = ExtResource("70_jx6p2")
frame_2/duration = 1.0
frame_3/texture = ExtResource("71_5gw1i")
frame_3/duration = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y076b"]
texture = SubResource("AnimatedTexture_s3m5w")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7wu0d"]
texture = ExtResource("72_rk4n8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5b7hj"]
texture = ExtResource("73_kpjjg")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_fyn5a"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("73_kpjjg")
frame_1/texture = ExtResource("74_xd88w")
frame_1/duration = 1.0
frame_2/texture = ExtResource("75_7tos3")
frame_2/duration = 1.0
frame_3/texture = ExtResource("76_lu6st")
frame_3/duration = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j5ox4"]
texture = SubResource("AnimatedTexture_fyn5a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ao8nt"]
texture = ExtResource("77_loym3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r1kug"]
texture = ExtResource("58_q3fqv")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_harsk"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("58_q3fqv")
frame_1/texture = ExtResource("59_uhnkx")
frame_1/duration = 1.0
frame_2/texture = ExtResource("60_487fi")
frame_2/duration = 1.0
frame_3/texture = ExtResource("61_fdwor")
frame_3/duration = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x4qvx"]
texture = SubResource("AnimatedTexture_harsk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0ccp5"]
texture = ExtResource("62_kto4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_py4h5"]
texture = ExtResource("63_msp78")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_28vx4"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("63_msp78")
frame_1/texture = ExtResource("64_yf0wa")
frame_1/duration = 1.0
frame_2/texture = ExtResource("65_hxnir")
frame_2/duration = 1.0
frame_3/texture = ExtResource("66_jpy5h")
frame_3/duration = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0nln7"]
texture = SubResource("AnimatedTexture_28vx4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijxvg"]
texture = ExtResource("67_5trg6")

[node name="Game" type="Node2D"]
process_mode = 3
texture_filter = 1
script = ExtResource("1_kj17n")

[node name="Height_line" type="Line2D" parent="."]
z_index = 1
position = Vector2(288, 80)
points = PackedVector2Array(-100, 0, 0, 0)
width = 6.0

[node name="Text" parent="Height_line" instance=ExtResource("2_44nk4")]
offset_left = -104.0
offset_top = -40.0
offset_right = -3.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="Height_markers" type="Node2D" parent="."]

[node name="WinAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -680)
sprite_frames = SubResource("SpriteFrames_tqif6")
frame = 46
frame_progress = 1.0
speed_scale = 2.0
metadata/_edit_lock_ = true

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(0, 120)
texture = ExtResource("2_j6tkv")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -680)
texture = ExtResource("51_7bvkt")
region_rect = Rect2(0, 0, 10000, 1e+06)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="Background"]
offset_left = -351.0
offset_top = -840.0
offset_right = -287.0
offset_bottom = 840.0
texture = ExtResource("5_jcp60")
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Background"]
offset_left = 288.0
offset_top = -840.0
offset_right = 352.0
offset_bottom = 840.0
texture = ExtResource("5_jcp60")
stretch_mode = 1
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="Background"]
show_behind_parent = true
offset_left = -794.0
offset_top = -840.0
offset_right = 799.0
offset_bottom = 840.0
texture = ExtResource("4_ra0dt")
stretch_mode = 1

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(0, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_p4n67")

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(0, -9)
zoom = Vector2(2, 2)
limit_bottom = -10
position_smoothing_enabled = true
position_smoothing_speed = 1.0
editor_draw_limits = true

[node name="Block_display" parent="." instance=ExtResource("4_8t058")]

[node name="Lose_stuff" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="Lose_stuff"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="Lose_stuff/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("68_3eue6")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Lose_stuff/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -65.5
offset_right = 160.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("56_62lxf")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Lose_stuff/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.5
offset_right = 203.5
offset_bottom = 169.0
grow_horizontal = 2
texture = ExtResource("55_vaftp")
metadata/_edit_use_anchors_ = true

[node name="Control2" type="Control" parent="Lose_stuff"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Lose_stuff/Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_jjq1f")
theme_override_styles/hover = SubResource("StyleBoxTexture_y076b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7wu0d")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Lose_stuff/Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -247.0
offset_right = -120.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_5b7hj")
theme_override_styles/hover = SubResource("StyleBoxTexture_j5ox4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ao8nt")
metadata/_edit_use_anchors_ = true

[node name="Restart" type="Button" parent="Lose_stuff/Control2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 112.0
offset_top = -96.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_r1kug")
theme_override_styles/hover = SubResource("StyleBoxTexture_x4qvx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0ccp5")
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Lose_stuff/Control2"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -96.0
offset_right = -56.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_py4h5")
theme_override_styles/hover = SubResource("StyleBoxTexture_0nln7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ijxvg")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Spawn_timer" to="." method="do_can_spawn"]
[connection signal="mouse_entered" from="Lose_stuff/Control2/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Lose_stuff/Control2/Button" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_entered" from="Lose_stuff/Control2/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Lose_stuff/Control2/Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Lose_stuff/Control2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="button_up" from="Lose_stuff/Control2/Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="Lose_stuff/Control2/Quit" to="." method="_on_quit_button_up"]
